--- a/supervisord.conf
+++ b/supervisord.conf
@@ -10,11 +10,11 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/fd/2
 stderr_logfile_maxbytes=0
 
-[program:healthcheck]
-command=python3 /app/healthcheck.py
-autostart=true
-autorestart=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/fd/2
-stderr_logfile_maxbytes=0
+; [program:healthcheck]
+; command=python3 /app/healthcheck.py
+; autostart=true
+; autorestart=true
+; stdout_logfile=/dev/fd/1
+; stdout_logfile_maxbytes=0
+; stderr_logfile=/dev/fd/2
+; stderr_logfile_maxbytes=0
